Improved wikisync main UI, fixed some bugs.
 - Fixed remote wiki link not showing correct server url
 - renderTree now accepts explicit models to display

--- a/wikisync/htdocs/wikisync.less
+++ b/wikisync/htdocs/wikisync.less
@@ -33,6 +33,10 @@
 	.hover {
 		background-color: #FFFFBF;
 	}
+	.hint {
+		font-weight: normal;
+		color: @grey;
+	}
 	label {
 		color: @grey;
 	}
@@ -47,6 +51,7 @@
 		text-indent: -1000px;
 		text-align: left;
 		display: inline-block;
+		overflow: hidden;
 	}
 	.status-badge {
 		background-repeat: no-repeat;
@@ -55,6 +60,7 @@
 		text-indent: -1000px;
 		text-align: left;
 		display: inline-block;
+		overflow: hidden;
 	}
 	.conflict .status {
 		.status-image('conflict');
